// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expensesSummary with 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </p>
</div>
`;

exports[`should render expensesSummary with multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    23
     
    expenses
     totalling 
    $235,123,409.87
  </p>
</div>
`;
